@@ -7,14 +7,14 @@ import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.databind.json.JsonMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.fasterxml.jackson.module.paramnames.ParameterNamesModule;
-import com.google.common.collect.ImmutableMap;
-import org.hamcrest.Matchers;
-import org.junit.Before;
-import org.junit.Test;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
-import uk.gov.hmcts.reform.finrem.caseorchestration.BaseServiceTest;
 import uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils;
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.FinremCaseDetailsMapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
@@ -33,12 +33,9 @@ import java.util.List;
 import java.util.Map;
 
 import static java.util.Arrays.asList;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstants.NO_VALUE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstants.YES_VALUE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType.GENERAL_ORDER_CONSENT_IN_CONTESTED;
@@ -72,14 +69,17 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT_SOLICITOR;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.SOLICITOR_RESPONSIBLE_FOR_DRAFTING_ORDER;
 
-public class CaseDataServiceTest extends BaseServiceTest {
+@ExtendWith(MockitoExtension.class)
+class CaseDataServiceTest {
 
-    @Autowired
+    @InjectMocks
     CaseDataService caseDataService;
+    
+    @Mock
     FinremCaseDetailsMapper finremCaseDetailsMapper;
 
-    @Before
-    public void setup() {
+    @BeforeEach
+    void setup() {
         ObjectMapper objectMapper = JsonMapper
             .builder()
             .addModule(new JavaTimeModule())
@@ -91,101 +91,100 @@ public class CaseDataServiceTest extends BaseServiceTest {
         finremCaseDetailsMapper =  new FinremCaseDetailsMapper(objectMapper);
     }
 
-
     @Test
-    public void isRespondentSolicitorResponsibleToDraftOrder_shouldReturnTrue() {
+    void isRespondentSolicitorResponsibleToDraftOrder_shouldReturnTrue() {
         Map<String, Object> caseData = new HashMap<>();
         caseData.put(SOLICITOR_RESPONSIBLE_FOR_DRAFTING_ORDER, RESPONDENT_SOLICITOR);
-        assertTrue(caseDataService.isRespondentSolicitorResponsibleToDraftOrder(caseData));
+        assertThat(caseDataService.isRespondentSolicitorResponsibleToDraftOrder(caseData)).isTrue();
     }
 
     @Test
-    public void isRespondentSolicitorResponsibleToDraftOrder_appSolicitor() {
+    void isRespondentSolicitorResponsibleToDraftOrder_appSolicitor() {
         Map<String, Object> caseData = new HashMap<>();
         caseData.put(SOLICITOR_RESPONSIBLE_FOR_DRAFTING_ORDER, APPLICANT_SOLICITOR);
-        assertFalse(caseDataService.isRespondentSolicitorResponsibleToDraftOrder(caseData));
+        assertThat(caseDataService.isRespondentSolicitorResponsibleToDraftOrder(caseData)).isFalse();
     }
 
     @Test
-    public void isRespondentSolicitorResponsibleToDraftOrder_fieldNotExist() {
+    void isRespondentSolicitorResponsibleToDraftOrder_fieldNotExist() {
         Map<String, Object> caseData = new HashMap<>();
-        assertFalse(caseDataService.isRespondentSolicitorResponsibleToDraftOrder(caseData));
+        assertThat(caseDataService.isRespondentSolicitorResponsibleToDraftOrder(caseData)).isFalse();
     }
 
     @Test
-    public void shouldSuccessfullyMoveValues() {
+    void shouldSuccessfullyMoveValues() {
         Map<String, Object> caseData = TestSetUpUtils.caseDataWithUploadHearingOrder();
 
         caseDataService.moveCollection(caseData, HEARING_ORDER_COLLECTION, "uploadHearingOrderRO");
 
-        assertThat(((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")), hasSize(3));
-        assertThat(caseData.get(HEARING_ORDER_COLLECTION), Matchers.nullValue());
+        assertThat((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")).hasSize(3);
+        assertThat(caseData.get(HEARING_ORDER_COLLECTION)).isNull();
     }
 
     @Test
-    public void shouldSuccessfullyMoveValuesToNewCollections() {
+    void shouldSuccessfullyMoveValuesToNewCollections() {
         Map<String, Object> caseData = TestSetUpUtils.caseDataWithUploadHearingOrder();
         caseData.put("uploadHearingOrderRO", null);
         caseDataService.moveCollection(caseData, HEARING_ORDER_COLLECTION, "uploadHearingOrderRO");
 
-        assertThat(((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")), hasSize(1));
-        assertThat(caseData.get(HEARING_ORDER_COLLECTION), Matchers.nullValue());
+        assertThat((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")).hasSize(1);
+        assertThat(caseData.get(HEARING_ORDER_COLLECTION)).isNull();
     }
 
     @Test
-    public void shouldDoNothingWithNonArraySourceValueMove() {
+    void shouldDoNothingWithNonArraySourceValueMove() {
         Map<String, Object> caseData = TestSetUpUtils.caseDataWithUploadHearingOrder();
         caseData.put(HEARING_ORDER_COLLECTION, "nonarrayValue");
         caseDataService.moveCollection(caseData, HEARING_ORDER_COLLECTION, "uploadHearingOrderRO");
 
-        assertThat(((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")), hasSize(2));
-        assertThat(caseData.get(HEARING_ORDER_COLLECTION), Matchers.is("nonarrayValue"));
+        assertThat((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")).hasSize(2);
+        assertThat(caseData.get(HEARING_ORDER_COLLECTION)).isEqualTo("nonarrayValue");
     }
 
     @Test
-    public void shouldDoNothingWithNonArrayDestinationValueMove() {
+    void shouldDoNothingWithNonArrayDestinationValueMove() {
         Map<String, Object> caseData = TestSetUpUtils.caseDataWithUploadHearingOrder();
         caseData.put("uploadHearingOrderRO", "nonarrayValue");
         caseDataService.moveCollection(caseData, HEARING_ORDER_COLLECTION, "uploadHearingOrderRO");
 
-        assertThat(caseData.get("uploadHearingOrderRO"), Matchers.is("nonarrayValue"));
-        assertThat(((Collection<CaseDocument>) caseData.get(HEARING_ORDER_COLLECTION)), hasSize(1));
+        assertThat(caseData.get("uploadHearingOrderRO")).isEqualTo("nonarrayValue");
+        assertThat((Collection<CaseDocument>) caseData.get(HEARING_ORDER_COLLECTION)).hasSize(1);
     }
 
     @Test
-    public void shouldDoNothingWhenSourceIsEmptyMove() {
+    void shouldDoNothingWhenSourceIsEmptyMove() {
         Map<String, Object> caseData = TestSetUpUtils.caseDataWithUploadHearingOrder();
         caseData.put(HEARING_ORDER_COLLECTION, null);
         caseDataService.moveCollection(caseData, HEARING_ORDER_COLLECTION, "uploadHearingOrderRO");
 
-        assertThat(((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")), hasSize(2));
-        assertThat(caseData.get(HEARING_ORDER_COLLECTION), Matchers.nullValue());
+        assertThat((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")).hasSize(2);
+        assertThat(caseData.get(HEARING_ORDER_COLLECTION)).isNull();
     }
 
     @Test
-    public void shouldOverwriteTargetCollection() {
+    void shouldOverwriteTargetCollection() {
         Map<String, Object> caseData = TestSetUpUtils.caseDataWithUploadHearingOrder();
-        assertThat(((Collection<CaseDocument>) caseData.get(HEARING_ORDER_COLLECTION)), hasSize(1));
-        assertThat(((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")), hasSize(2));
+        assertThat((Collection<CaseDocument>) caseData.get(HEARING_ORDER_COLLECTION)).hasSize(1);
+        assertThat(((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO"))).hasSize(2);
 
         caseDataService.overwriteCollection(caseData, HEARING_ORDER_COLLECTION, "uploadHearingOrderRO");
 
-        assertThat(((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO")), hasSize(1));
+        assertThat(((Collection<CaseDocument>) caseData.get("uploadHearingOrderRO"))).hasSize(1);
     }
 
     @Test
-    public void nullToEmptyShouldReturnEmptyWhenNull() {
-        assertThat(caseDataService.nullToEmpty(null), is(""));
+    void nullToEmptyShouldReturnEmptyWhenNull() {
+        assertThat(caseDataService.nullToEmpty(null)).isEqualTo("");
     }
 
     @Test
-    public void nullToEmptyShouldReturnEmptyWhenEmpty() {
-        assertThat(caseDataService.nullToEmpty(""), is(""));
+    void nullToEmptyShouldReturnEmptyWhenEmpty() {
+        assertThat(caseDataService.nullToEmpty("")).isEqualTo("");
     }
 
     @Test
-    public void nullToEmptyShouldReturnStringWhenString() {
-        assertThat(caseDataService.nullToEmpty("this is my value"), is("this is my value"));
+    void nullToEmptyShouldReturnStringWhenString() {
+        assertThat(caseDataService.nullToEmpty("this is my value")).isEqualTo("this is my value");
     }
 
     private final ObjectMapper mapper = new ObjectMapper();
@@ -193,26 +192,26 @@ public class CaseDataServiceTest extends BaseServiceTest {
     private static final String L_NAME = "l";
 
     @Test
-    public void addressLineOneAndPostCodeAreBothNotEmptyShouldReturnTrueWhenLineOneAndPostCodeArePopulated() {
+    void addressLineOneAndPostCodeAreBothNotEmptyShouldReturnTrueWhenLineOneAndPostCodeArePopulated() {
         assertThat(
-            caseDataService.addressLineOneAndPostCodeAreBothNotEmpty(createAddressObject(asList("London Road", "sw2 3rf"))), is(true)
-        );
+            caseDataService.addressLineOneAndPostCodeAreBothNotEmpty(createAddressObject(asList("London Road", "sw2 3rf")))
+        ).isTrue();
     }
 
     @Test
-    public void addressLineOneAndPostCodeAreBothEmptyShouldReturnFalse() {
+    void addressLineOneAndPostCodeAreBothEmptyShouldReturnFalse() {
         assertThat(
-            caseDataService.addressLineOneAndPostCodeAreBothNotEmpty(null), is(false)
-        );
+            caseDataService.addressLineOneAndPostCodeAreBothNotEmpty(null)
+        ).isFalse();
     }
 
     @Test
-    public void addressLineOneAndPostCodeAreBothNotEmptyShouldReturnFalseWhenNull() {
-        assertThat(caseDataService.addressLineOneAndPostCodeAreBothNotEmpty(null), is(false));
+    void addressLineOneAndPostCodeAreBothNotEmptyShouldReturnFalseWhenNull() {
+        assertThat(caseDataService.addressLineOneAndPostCodeAreBothNotEmpty(null)).isFalse();
     }
 
     @Test
-    public void addressLineOneAndPostCodeAreBothNotEmptyShouldReturnFalse() {
+    void addressLineOneAndPostCodeAreBothNotEmptyShouldReturnFalse() {
         asList(
             asList("", "sw2 3rf"),
             asList("", ""),
@@ -221,24 +220,23 @@ public class CaseDataServiceTest extends BaseServiceTest {
             asList(null, null),
             asList(null, "Sw8 7ty")
         ).forEach(data -> assertThat(
-            caseDataService.addressLineOneAndPostCodeAreBothNotEmpty(createAddressObject(data)),
-            is(false))
+            caseDataService.addressLineOneAndPostCodeAreBothNotEmpty(createAddressObject(data))).isFalse()
         );
     }
 
     @Test
-    public void buildFullNameShouldBuildFullName() {
-        assertThat(caseDataService.buildFullName(fullName("Pit", "Smith"), F_NAME, L_NAME), is("Pit Smith"));
-        assertThat(caseDataService.buildFullName(fullName("", "Smith"), F_NAME, L_NAME), is("Smith"));
-        assertThat(caseDataService.buildFullName(fullName("Pit Adam", "Smith"), F_NAME, L_NAME), is("Pit Adam Smith"));
-        assertThat(caseDataService.buildFullName(fullName("Pit", "Smith-Johnson"), F_NAME, L_NAME), is("Pit Smith-Johnson"));
-        assertThat(caseDataService.buildFullName(fullName("Pit JK", "Smith"), F_NAME, L_NAME), is("Pit JK Smith"));
-        assertThat(caseDataService.buildFullName(fullName("Pit", ""), F_NAME, L_NAME), is("Pit"));
-        assertThat(caseDataService.buildFullName(fullName("", ""), F_NAME, L_NAME), is(""));
-        assertThat(caseDataService.buildFullName(fullName(null, ""), F_NAME, L_NAME), is(""));
-        assertThat(caseDataService.buildFullName(fullName("", null), F_NAME, L_NAME), is(""));
-        assertThat(caseDataService.buildFullName(fullName("     ", "    "), F_NAME, L_NAME), is(""));
-        assertThat(caseDataService.buildFullName(fullName("    Pit   ", "     Smith    "), F_NAME, L_NAME), is("Pit Smith"));
+    void buildFullNameShouldBuildFullName() {
+        assertThat(caseDataService.buildFullName(fullName("Pit", "Smith"), F_NAME, L_NAME)).isEqualTo("Pit Smith");
+        assertThat(caseDataService.buildFullName(fullName("", "Smith"), F_NAME, L_NAME)).isEqualTo("Smith");
+        assertThat(caseDataService.buildFullName(fullName("Pit Adam", "Smith"), F_NAME, L_NAME)).isEqualTo("Pit Adam Smith");
+        assertThat(caseDataService.buildFullName(fullName("Pit", "Smith-Johnson"), F_NAME, L_NAME)).isEqualTo("Pit Smith-Johnson");
+        assertThat(caseDataService.buildFullName(fullName("Pit JK", "Smith"), F_NAME, L_NAME)).isEqualTo("Pit JK Smith");
+        assertThat(caseDataService.buildFullName(fullName("Pit", ""), F_NAME, L_NAME)).isEqualTo("Pit");
+        assertThat(caseDataService.buildFullName(fullName("", ""), F_NAME, L_NAME)).isEmpty();
+        assertThat(caseDataService.buildFullName(fullName(null, ""), F_NAME, L_NAME)).isEmpty();
+        assertThat(caseDataService.buildFullName(fullName("", null), F_NAME, L_NAME)).isEmpty();
+        assertThat(caseDataService.buildFullName(fullName("     ", "    "), F_NAME, L_NAME)).isEmpty();
+        assertThat(caseDataService.buildFullName(fullName("    Pit   ", "     Smith    "), F_NAME, L_NAME)).isEqualTo("Pit Smith");
     }
 
     private static Map<String, String> createAddressObject(List<?> data) {
@@ -259,7 +257,7 @@ public class CaseDataServiceTest extends BaseServiceTest {
     }
 
     @Test
-    public void shouldPopulateFinancialRemediesCourtDetails() {
+    void shouldPopulateFinancialRemediesCourtDetails() {
         Map<String, Object> data = new HashMap<>();
         data.put(REGION, LONDON);
         data.put(LONDON_FRC_LIST, LONDON_CFC);
@@ -268,110 +266,111 @@ public class CaseDataServiceTest extends BaseServiceTest {
 
         caseDataService.setFinancialRemediesCourtDetails(caseDetails);
 
-        assertThat(caseDetails.getData().get(CONSENT_ORDER_FRC_NAME), is("East London Family Court"));
-        assertThat(caseDetails.getData().get(CONSENT_ORDER_FRC_ADDRESS),
-            is("East London Family Court, 6th and 7th Floor, 11 Westferry Circus, London, E14 4HD"));
-        assertThat(caseDetails.getData().get(CONSENT_ORDER_FRC_EMAIL), is("FRCLondon@justice.gov.uk"));
-        assertThat(caseDetails.getData().get(CONSENT_ORDER_FRC_PHONE), is("0300 123 5577"));
+        assertThat(caseDetails.getData()).containsEntry(CONSENT_ORDER_FRC_NAME,
+            "East London Family Court");
+        assertThat(caseDetails.getData()).containsEntry(CONSENT_ORDER_FRC_ADDRESS,
+            "East London Family Court, 6th and 7th Floor, 11 Westferry Circus, London, E14 4HD");
+        assertThat(caseDetails.getData()).containsEntry(CONSENT_ORDER_FRC_EMAIL, "FRCLondon@justice.gov.uk");
+        assertThat(caseDetails.getData()).containsEntry(CONSENT_ORDER_FRC_PHONE, "0300 123 5577");
     }
 
     @Test
-    public void isApplicantRepresentedByASolicitorShouldReturnTrueWhenApplicantRepresentedIsYes() {
-        assertThat(caseDataService.isApplicantRepresentedByASolicitor(createCaseDataApplRepresented(YES_VALUE)), is(true));
+    void isApplicantRepresentedByASolicitorShouldReturnTrueWhenApplicantRepresentedIsYes() {
+        assertThat(caseDataService.isApplicantRepresentedByASolicitor(createCaseDataApplRepresented(YES_VALUE))).isTrue();
     }
 
     @Test
-    public void isApplicantRepresentedByASolicitorShouldReturnFalse() {
+    void isApplicantRepresentedByASolicitorShouldReturnFalse() {
         asList(
             NO_VALUE,
             "",
             null,
             "this is some random string, that doesn't make any sense"
-        ).forEach(value -> assertThat(caseDataService.isApplicantRepresentedByASolicitor(createCaseDataApplRepresented(value)), is(false)));
+        ).forEach(value -> assertThat(caseDataService.isApplicantRepresentedByASolicitor(createCaseDataApplRepresented(value))).isFalse());
     }
 
     @Test
-    public void isApplicantSolicitorAgreeToReceiveEmailsShouldReturnTrueWhenAppSolAgreedToReceiveEmailsIsYesForConsented() {
+    void isApplicantSolicitorAgreeToReceiveEmailsShouldReturnTrueWhenAppSolAgreedToReceiveEmailsIsYesForConsented() {
         Map<String, Object> data = new HashMap<>();
         data.put(APP_SOLICITOR_AGREE_TO_RECEIVE_EMAILS_CONSENTED, YES_VALUE);
         CaseDetails caseDetails = CaseDetails.builder().caseTypeId(CaseType.CONSENTED.getCcdType()).data(data).build();
 
-        assertThat(caseDataService.isApplicantSolicitorAgreeToReceiveEmails(caseDetails), is(true));
+        assertThat(caseDataService.isApplicantSolicitorAgreeToReceiveEmails(caseDetails)).isTrue();
     }
 
     @Test
-    public void isApplicantSolicitorAgreeToReceiveEmailsShouldReturnFalseWhenAppSolAgreedToReceiveEmailsIsNoForConsented() {
+    void isApplicantSolicitorAgreeToReceiveEmailsShouldReturnFalseWhenAppSolAgreedToReceiveEmailsIsNoForConsented() {
         Map<String, Object> data = new HashMap<>();
         data.put(APP_SOLICITOR_AGREE_TO_RECEIVE_EMAILS_CONSENTED, null);
         CaseDetails caseDetails = CaseDetails.builder().caseTypeId(CaseType.CONSENTED.getCcdType()).data(data).build();
 
-        assertThat(caseDataService.isApplicantSolicitorAgreeToReceiveEmails(caseDetails), is(false));
+        assertThat(caseDataService.isApplicantSolicitorAgreeToReceiveEmails(caseDetails)).isFalse();
     }
 
     @Test
-    public void isApplicantSolicitorAgreeToReceiveEmailsShouldReturnTrueWhenAppSolAgreedToReceiveEmailsIsYesForContested() {
+    void isApplicantSolicitorAgreeToReceiveEmailsShouldReturnTrueWhenAppSolAgreedToReceiveEmailsIsYesForContested() {
         Map<String, Object> data = new HashMap<>();
         data.put(APP_SOLICITOR_AGREE_TO_RECEIVE_EMAILS_CONTESTED, YES_VALUE);
         CaseDetails caseDetails = CaseDetails.builder().caseTypeId(CaseType.CONTESTED.getCcdType()).data(data).build();
 
-        assertThat(caseDataService.isApplicantSolicitorAgreeToReceiveEmails(caseDetails), is(true));
+        assertThat(caseDataService.isApplicantSolicitorAgreeToReceiveEmails(caseDetails)).isTrue();
     }
 
     @Test
-    public void isApplicantSolicitorAgreeToReceiveEmailsShouldReturnFalseWhenAppSolAgreedToReceiveEmailsIsNoForContested() {
+    void isApplicantSolicitorAgreeToReceiveEmailsShouldReturnFalseWhenAppSolAgreedToReceiveEmailsIsNoForContested() {
         Map<String, Object> data = new HashMap<>();
         data.put(APP_SOLICITOR_AGREE_TO_RECEIVE_EMAILS_CONTESTED, null);
         CaseDetails caseDetails = CaseDetails.builder().caseTypeId(CaseType.CONTESTED.getCcdType()).data(data).build();
 
-        assertThat(caseDataService.isApplicantSolicitorAgreeToReceiveEmails(caseDetails), is(false));
+        assertThat(caseDataService.isApplicantSolicitorAgreeToReceiveEmails(caseDetails)).isFalse();
     }
 
     @Test
-    public void isConsentedRespondentRepresentedByASolicitorShouldReturnTrueWhenRepresentedSolicitorIsYes() {
-        assertThat(caseDataService.isRespondentRepresentedByASolicitor(createCaseDataRespRepresentedConsented(YES_VALUE)), is(true));
+    void isConsentedRespondentRepresentedByASolicitorShouldReturnTrueWhenRepresentedSolicitorIsYes() {
+        assertThat(caseDataService.isRespondentRepresentedByASolicitor(createCaseDataRespRepresentedConsented(YES_VALUE))).isTrue();
     }
 
     @Test
-    public void isContestedRespondentRepresentedByASolicitorShouldReturnTrueWhenRepresentedSolicitorIsYes() {
-        assertThat(caseDataService.isRespondentRepresentedByASolicitor(createCaseDataRespRepresentedContested(YES_VALUE)), is(true));
+    void isContestedRespondentRepresentedByASolicitorShouldReturnTrueWhenRepresentedSolicitorIsYes() {
+        assertThat(caseDataService.isRespondentRepresentedByASolicitor(createCaseDataRespRepresentedContested(YES_VALUE))).isTrue();
     }
 
     @Test
-    public void isConsentedRespondentRepresentedByASolicitorShouldReturnFalseWhenRepresentedSolicitorIsNo() {
-        assertThat(caseDataService.isRespondentRepresentedByASolicitor(createCaseDataRespRepresentedConsented(NO_VALUE)), is(false));
+    void isConsentedRespondentRepresentedByASolicitorShouldReturnFalseWhenRepresentedSolicitorIsNo() {
+        assertThat(caseDataService.isRespondentRepresentedByASolicitor(createCaseDataRespRepresentedConsented(NO_VALUE))).isFalse();
     }
 
     @Test
-    public void isContestedRespondentRepresentedByASolicitorShouldReturnFalseWhenRepresentedSolicitorIsNo() {
-        assertThat(caseDataService.isRespondentRepresentedByASolicitor(createCaseDataRespRepresentedContested(NO_VALUE)), is(false));
+    void isContestedRespondentRepresentedByASolicitorShouldReturnFalseWhenRepresentedSolicitorIsNo() {
+        assertThat(caseDataService.isRespondentRepresentedByASolicitor(createCaseDataRespRepresentedContested(NO_VALUE))).isFalse();
     }
 
     @Test
-    public void isConsentedInContestedCaseShouldReturnTrueWhenIsContestedCaseAndConsentD81QuestionIsPopulated() throws IOException {
+    void isConsentedInContestedCaseShouldReturnTrueWhenIsContestedCaseAndConsentD81QuestionIsPopulated() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/general-order-consented-in-contested.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isConsentedInContestedCase(caseDetails), is(true));
+        assertThat(caseDataService.isConsentedInContestedCase(caseDetails)).isTrue();
     }
 
     @Test
-    public void isConsentedInContestedCaseShouldReturnFalseWhenIsContestedCaseAndConsentD81QuestionIsNull() throws IOException {
+    void isConsentedInContestedCaseShouldReturnFalseWhenIsContestedCaseAndConsentD81QuestionIsNull() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/general-order-contested.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isConsentedInContestedCase(caseDetails), is(false));
+        assertThat(caseDataService.isConsentedInContestedCase(caseDetails)).isFalse();
     }
 
     @Test
-    public void isConsentedInContestedCaseShouldReturnFalseWhenIsConsentedCaseAndConsentD81QuestionIsNull() throws IOException {
+    void isConsentedInContestedCaseShouldReturnFalseWhenIsConsentedCaseAndConsentD81QuestionIsNull() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/general-order-consented.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isConsentedInContestedCase(caseDetails), is(false));
+        assertThat(caseDataService.isConsentedInContestedCase(caseDetails)).isFalse();
     }
 
     @Test
-    public void isNotEmptyShouldReturnTrueWhenPopulated() {
+    void isNotEmptyShouldReturnTrueWhenPopulated() {
         asList(
             YES_VALUE,
             "    ",
@@ -379,226 +378,226 @@ public class CaseDataServiceTest extends BaseServiceTest {
             "1234",
             "@#$R@#F@$T"
         ).forEach(value -> assertThat(
-            caseDataService.isNotEmpty(APPLICANT_REPRESENTED, createCaseDataApplRepresented(value)), is(true))
+            caseDataService.isNotEmpty(APPLICANT_REPRESENTED, createCaseDataApplRepresented(value))).isTrue()
         );
     }
 
     @Test
-    public void isNotEmptyShouldReturnFalseWhenEmptyMap() {
-        assertThat(caseDataService.isNotEmpty(APPLICANT_REPRESENTED, ImmutableMap.of()), is(false));
+    void isNotEmptyShouldReturnFalseWhenEmptyMap() {
+        assertThat(caseDataService.isNotEmpty(APPLICANT_REPRESENTED, Map.of())).isFalse();
     }
 
     @Test
-    public void isNotEmptyShouldReturnFalseWhenFieldIsEmpty() {
-        assertThat(caseDataService.isNotEmpty(APPLICANT_REPRESENTED, createCaseDataApplRepresented("")), is(false));
-    }
-
-    @Test(expected = NullPointerException.class)
-    public void isNotEmptyShouldThrowNullPointerException() {
-        caseDataService.isNotEmpty(APPLICANT_REPRESENTED, null);
+    void isNotEmptyShouldReturnFalseWhenFieldIsEmpty() {
+        assertThat(caseDataService.isNotEmpty(APPLICANT_REPRESENTED, createCaseDataApplRepresented(""))).isFalse();
     }
 
     @Test
-    public void isAmendedConsentOrderTypeShouldReturnFalseForDefaultEmptyObject() {
+    void isNotEmptyShouldThrowNullPointerException() {
+        assertThrows(NullPointerException.class,
+            () -> caseDataService.isNotEmpty(APPLICANT_REPRESENTED, null));
+    }
+
+    @Test
+    void isAmendedConsentOrderTypeShouldReturnFalseForDefaultEmptyObject() {
         RespondToOrderData data = new RespondToOrderData();
         data.setRespondToOrder(new RespondToOrder());
 
-        assertThat(caseDataService.isAmendedConsentOrderType(data), is(false));
+        assertThat(caseDataService.isAmendedConsentOrderType(data)).isFalse();
     }
 
     @Test
-    public void isAmendedConsentOrderTypeShouldReturnFalseWhenDocumentTypeIsNotAmendedConsentOrder() {
-        assertThat(caseDataService.isAmendedConsentOrderType(getRespondToOrderData("ble ble ble")), is(false));
-    }
-
-    @Test(expected = NullPointerException.class)
-    public void isAmendedConsentOrderTypeShouldThrowNullPointerException() {
-        caseDataService.isAmendedConsentOrderType(null);
+    void isAmendedConsentOrderTypeShouldReturnFalseWhenDocumentTypeIsNotAmendedConsentOrder() {
+        assertThat(caseDataService.isAmendedConsentOrderType(getRespondToOrderData("ble ble ble"))).isFalse();
     }
 
     @Test
-    public void isAmendedConsentOrderTypeShouldReturnTrueWhenDocumentTypeIsAmendedConsentOrder() {
-        assertThat(caseDataService.isAmendedConsentOrderType(getRespondToOrderData(AMEND_CONSENT_ORDER)), is(true));
+    void isAmendedConsentOrderTypeShouldThrowNullPointerException() {
+        assertThrows(NullPointerException.class,
+            () -> caseDataService.isAmendedConsentOrderType(null));
     }
 
     @Test
-    public void isApplicantSolicitorResponsibleToDraftOrderTrueWhenTheyHaveBeenNominated() {
+    void isAmendedConsentOrderTypeShouldReturnTrueWhenDocumentTypeIsAmendedConsentOrder() {
+        assertThat(caseDataService.isAmendedConsentOrderType(getRespondToOrderData(AMEND_CONSENT_ORDER))).isTrue();
+    }
+
+    @Test
+    void isApplicantSolicitorResponsibleToDraftOrderTrueWhenTheyHaveBeenNominated() {
         Map<String, Object> data = new HashMap<>();
         data.put(SOLICITOR_RESPONSIBLE_FOR_DRAFTING_ORDER, APPLICANT_SOLICITOR);
 
-        assertThat(caseDataService.isApplicantSolicitorResponsibleToDraftOrder(data), is(true));
+        assertThat(caseDataService.isApplicantSolicitorResponsibleToDraftOrder(data)).isTrue();
     }
 
     @Test
-    public void isApplicantSolicitorResponsibleToDraftOrderFalseWhenRespondentSolicitorIsNominated() {
+    void isApplicantSolicitorResponsibleToDraftOrderFalseWhenRespondentSolicitorIsNominated() {
         Map<String, Object> data = new HashMap<>();
         data.put(SOLICITOR_RESPONSIBLE_FOR_DRAFTING_ORDER, RESPONDENT_SOLICITOR);
 
-        assertThat(caseDataService.isApplicantSolicitorResponsibleToDraftOrder(data), is(false));
+        assertThat(caseDataService.isApplicantSolicitorResponsibleToDraftOrder(data)).isFalse();
     }
 
     @Test
-    public void isApplicantSolicitorResponsibleToDraftOrderFalseWhenNull() {
+    void isApplicantSolicitorResponsibleToDraftOrderFalseWhenNull() {
         Map<String, Object> data = new HashMap<>();
         data.put(SOLICITOR_RESPONSIBLE_FOR_DRAFTING_ORDER, null);
 
-        assertThat(caseDataService.isApplicantSolicitorResponsibleToDraftOrder(data), is(false));
+        assertThat(caseDataService.isApplicantSolicitorResponsibleToDraftOrder(data)).isFalse();
     }
 
     @Test
-    public void isConsentedApplicationShouldReturnTrueWheCaseTypeIsSetToConsentedCaseType() throws IOException {
+    void isConsentedApplicationShouldReturnTrueWheCaseTypeIsSetToConsentedCaseType() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/valid-latest-consent-order.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isConsentedApplication(caseDetails), is(true));
+        assertThat(caseDataService.isConsentedApplication(caseDetails)).isTrue();
     }
 
     @Test
-    public void isConsentedApplicationShouldReturnFalseWhenCaseTypeIsSetToContested() throws IOException {
+    void isConsentedApplicationShouldReturnFalseWhenCaseTypeIsSetToContested() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/contested/contested-hwf-without-solicitor-consent.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isConsentedApplication(caseDetails), is(false));
+        assertThat(caseDataService.isConsentedApplication(caseDetails)).isFalse();
     }
 
     @Test
-    public void isConsentedApplicationShouldReturnFalseWhenCaseTypeIsNull() throws IOException {
+    void isConsentedApplicationShouldReturnFalseWhenCaseTypeIsNull() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/empty-casedata.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isConsentedApplication(caseDetails), is(false));
+        assertThat(caseDataService.isConsentedApplication(caseDetails)).isFalse();
     }
 
     @Test
-    public void isContestedApplicationShouldReturnTrueWheCaseTypeIsSetToContested() throws IOException {
+    void isContestedApplicationShouldReturnTrueWheCaseTypeIsSetToContested() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/contested/contested-hwf-without-solicitor-consent.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isContestedApplication(caseDetails), is(true));
+        assertThat(caseDataService.isContestedApplication(caseDetails)).isTrue();
     }
 
     @Test
-    public void isContestedApplicationShouldReturnFalseWheCaseTypeIsSetToConsented() throws IOException {
+    void isContestedApplicationShouldReturnFalseWheCaseTypeIsSetToConsented() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/valid-latest-consent-order.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isContestedApplication(caseDetails), is(false));
+        assertThat(caseDataService.isContestedApplication(caseDetails)).isFalse();
     }
 
     @Test
-    public void isContestedApplicationShouldReturnFalseWheCaseTypeIsSetToNull() throws IOException {
+    void isContestedApplicationShouldReturnFalseWheCaseTypeIsSetToNull() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/empty-casedata.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isContestedApplication(caseDetails), is(false));
+        assertThat(caseDataService.isContestedApplication(caseDetails)).isFalse();
     }
 
     @Test
-    public void isContestedPaperApplicationShouldReturnTrueWhenCaseTypeIsSetToContestedAndIsPaperCase() throws IOException {
+    void isContestedPaperApplicationShouldReturnTrueWhenCaseTypeIsSetToContestedAndIsPaperCase() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/contested/validate-hearing-with-fastTrackDecision-paperApplication.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isContestedPaperApplication(caseDetails), is(true));
+        assertThat(caseDataService.isContestedPaperApplication(caseDetails)).isTrue();
     }
 
     @Test
-    public void isContestedPaperApplicationShouldReturnFalseWhenCaseTypeIsSetToConsentedAndIsPaperCase() throws IOException {
+    void isContestedPaperApplicationShouldReturnFalseWhenCaseTypeIsSetToConsentedAndIsPaperCase() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/bulkprint/bulk-print-paper-application.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isContestedPaperApplication(caseDetails), is(false));
+        assertThat(caseDataService.isContestedPaperApplication(caseDetails)).isFalse();
     }
 
     @Test
-    public void isContestedPaperApplicationShouldReturnFalseWhenCaseTypeIsSetToContestedAndNotPaperCase() throws IOException {
+    void isContestedPaperApplicationShouldReturnFalseWhenCaseTypeIsSetToContestedAndNotPaperCase() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/contested/contested-hwf-without-solicitor-consent.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isContestedPaperApplication(caseDetails), is(false));
+        assertThat(caseDataService.isContestedPaperApplication(caseDetails)).isFalse();
     }
 
     @Test
-    public void isContestedPaperApplicationShouldReturnFalseWhenCaseTypeIsSetToConsented() throws IOException {
+    void isContestedPaperApplicationShouldReturnFalseWhenCaseTypeIsSetToConsented() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/valid-latest-consent-order.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isContestedPaperApplication(caseDetails), is(false));
+        assertThat(caseDataService.isContestedPaperApplication(caseDetails)).isFalse();
     }
 
     @Test
-    public void isContestedPaperApplicationShouldReturnFalseWhenCaseTypeIsSetToNull() throws IOException {
+    void isContestedPaperApplicationShouldReturnFalseWhenCaseTypeIsSetToNull() throws IOException {
         CaseDetails caseDetails = mapper.readValue(getClass().getResourceAsStream(
             "/fixtures/empty-casedata.json"), CallbackRequest.class).getCaseDetails();
 
-        assertThat(caseDataService.isContestedPaperApplication(caseDetails), is(false));
+        assertThat(caseDataService.isContestedPaperApplication(caseDetails)).isFalse();
     }
 
     @Test
-    public void isApplicantAddressConfidentialTrueWhenApplicantAddressIsMarkedAsConfidential() {
+    void isApplicantAddressConfidentialTrueWhenApplicantAddressIsMarkedAsConfidential() {
         Map<String, Object> data = new HashMap<>();
         data.put(APPLICANT_CONFIDENTIAL_ADDRESS, "Yes");
 
-        assertThat(caseDataService.isApplicantAddressConfidential(data), is(true));
+        assertThat(caseDataService.isApplicantAddressConfidential(data)).isTrue();
     }
 
     @Test
-    public void isApplicantAddressConfidentialFalseWhenApplicantAddressIsNotMarkedAsConfidential() {
+    void isApplicantAddressConfidentialFalseWhenApplicantAddressIsNotMarkedAsConfidential() {
         Map<String, Object> data = new HashMap<>();
         data.put(APPLICANT_CONFIDENTIAL_ADDRESS, "No");
 
-        assertThat(caseDataService.isApplicantAddressConfidential(data), is(false));
+        assertThat(caseDataService.isApplicantAddressConfidential(data)).isFalse();
     }
 
     @Test
-    public void isApplicantAddressConfidentialFalseWhenApplicantAddressConfidentialFieldIsNotPresent() {
+    void isApplicantAddressConfidentialFalseWhenApplicantAddressConfidentialFieldIsNotPresent() {
         Map<String, Object> data = new HashMap<>();
 
-        assertThat(caseDataService.isApplicantAddressConfidential(data), is(false));
+        assertThat(caseDataService.isApplicantAddressConfidential(data)).isFalse();
     }
 
     @Test
-    public void isRespondentAddressConfidentialTrueWhenRespondentAddressIsMarkedAsConfidential() {
+    void isRespondentAddressConfidentialTrueWhenRespondentAddressIsMarkedAsConfidential() {
         Map<String, Object> data = new HashMap<>();
         data.put(RESPONDENT_CONFIDENTIAL_ADDRESS, "Yes");
 
-        assertThat(caseDataService.isRespondentAddressConfidential(data), is(true));
+        assertThat(caseDataService.isRespondentAddressConfidential(data)).isTrue();
     }
 
     @Test
-    public void isRespondentAddressConfidentialFalseWhenRespondentAddressIsNotMarkedAsConfidential() {
+    void isRespondentAddressConfidentialFalseWhenRespondentAddressIsNotMarkedAsConfidential() {
         Map<String, Object> data = new HashMap<>();
         data.put(RESPONDENT_CONFIDENTIAL_ADDRESS, "No");
 
-        assertThat(caseDataService.isRespondentAddressConfidential(data), is(false));
+        assertThat(caseDataService.isRespondentAddressConfidential(data)).isFalse();
     }
 
     @Test
-    public void isRespondentAddressConfidentialFalseWhenRespondentAddressConfidentialFieldIsNotPresent() {
+    void isRespondentAddressConfidentialFalseWhenRespondentAddressConfidentialFieldIsNotPresent() {
         Map<String, Object> data = new HashMap<>();
 
-        assertThat(caseDataService.isRespondentAddressConfidential(data), is(false));
+        assertThat(caseDataService.isRespondentAddressConfidential(data)).isFalse();
     }
 
     @Test
-    public void shouldBuildFullIntervener1Name() {
+    void shouldBuildFullIntervener1Name() {
         Map<String, Object> data = new HashMap<>();
         data.put(INTERVENER1_FIRST_MIDDLE_NAME, "Sarah John");
         data.put(INTERVENER1_LAST_NAME, "Smith");
         CaseDetails caseDetails = CaseDetails.builder().data(data).build();
-        assertEquals(
-            "Sarah John Smith", caseDataService.buildFullIntervener1Name(caseDetails)
-        );
+        assertEquals("Sarah John Smith", caseDataService.buildFullIntervener1Name(caseDetails));
     }
 
     @Test
-    public void isContestedFinremCaseDetailsApplication() {
+    void isContestedFinremCaseDetailsApplication() {
         FinremCaseDetails finremCaseDetails
             = FinremCaseDetails.builder().caseType(CaseType.CONTESTED).id(123L).build();
-        assertTrue(caseDataService.isContestedApplication(finremCaseDetails));
+        assertThat(caseDataService.isContestedApplication(finremCaseDetails)).isTrue();
     }
 
     @Test
-    public void shouldBuildFullIntervener2Name() {
+    void shouldBuildFullIntervener2Name() {
         Map<String, Object> data = new HashMap<>();
         data.put(INTERVENER2_FIRST_MIDDLE_NAME, "John Taylor");
         data.put(INTERVENER2_LAST_NAME, "Fitzgerald");
@@ -609,7 +608,7 @@ public class CaseDataServiceTest extends BaseServiceTest {
     }
 
     @Test
-    public void shouldBuildFullIntervener3Name() {
+    void shouldBuildFullIntervener3Name() {
         Map<String, Object> data = new HashMap<>();
         data.put(INTERVENER3_FIRST_MIDDLE_NAME, "Sam Tyler");
         data.put(INTERVENER3_LAST_NAME, "Peters");
@@ -620,7 +619,7 @@ public class CaseDataServiceTest extends BaseServiceTest {
     }
 
     @Test
-    public void shouldBuildFullIntervener4Name() {
+    void shouldBuildFullIntervener4Name() {
         Map<String, Object> data = new HashMap<>();
         data.put(INTERVENER4_FIRST_MIDDLE_NAME, "Yousef Luke");
         data.put(INTERVENER4_LAST_NAME, "Brown");
@@ -631,27 +630,28 @@ public class CaseDataServiceTest extends BaseServiceTest {
     }
 
     @Test
-    public void testHasConsentOrderIsTrue() {
+    void testHasConsentOrderIsTrue() {
         ConsentOrderWrapper consentOrderWrapper = new ConsentOrderWrapper();
         consentOrderWrapper.setConsentD81Question(YesOrNo.YES);
         FinremCaseData caseData = FinremCaseData.builder()
             .consentOrderWrapper(consentOrderWrapper)
             .build();
 
-        assertTrue(caseDataService.hasConsentOrder(caseData));
+        assertThat(caseDataService.hasConsentOrder(caseData)).isTrue();
     }
 
     @Test
-    public void testHasConsentOrderIsFalse() {
-        assertFalse(caseDataService.hasConsentOrder(new FinremCaseData()));
+    void testHasConsentOrderIsFalse() {
+        assertThat(caseDataService.hasConsentOrder(new FinremCaseData())).isFalse();
     }
 
     @Test
-    public void shouldReturnTrueIfConsentInContestedEvent() {
-        assertTrue(caseDataService.isConsentInContestedGeneralOrderEvent(GENERAL_ORDER_CONSENT_IN_CONTESTED));
+    void shouldReturnTrueIfConsentInContestedEvent() {
+        assertThat(caseDataService.isConsentInContestedGeneralOrderEvent(GENERAL_ORDER_CONSENT_IN_CONTESTED)).isTrue();
     }
 
-    public void givenRepresentedFlagOnApplicant_whenIsLitigantRepresented_thenTrue() {
+    @Test
+    void givenRepresentedFlagOnApplicant_whenIsLitigantRepresented_thenTrue() {
         Map<String, Object> caseData = new HashMap<>();
         caseData.put(APPLICANT_REPRESENTED, "Yes");
         CaseDetails finremCaseDetails
@@ -659,11 +659,11 @@ public class CaseDataServiceTest extends BaseServiceTest {
 
         boolean result = caseDataService.isLitigantRepresented(finremCaseDetails, true);
 
-        assertThat(result, is(true));
+        assertThat(result).isTrue();
     }
 
     @Test
-    public void givenContestedRepresentedFlagOnRespondent_whenIsLitigantRepresented_thenTrue() {
+    void givenContestedRepresentedFlagOnRespondent_whenIsLitigantRepresented_thenTrue() {
         Map<String, Object> caseData = new HashMap<>();
         caseData.put(APPLICANT_REPRESENTED, "No");
         caseData.put(CONTESTED_RESPONDENT_REPRESENTED, "Yes");
@@ -672,11 +672,11 @@ public class CaseDataServiceTest extends BaseServiceTest {
 
         boolean result = caseDataService.isLitigantRepresented(finremCaseDetails, false);
 
-        assertThat(result, is(true));
+        assertThat(result).isTrue();
     }
 
     @Test
-    public void givenConsentedRepresentedFlagOnRespondent_whenIsLitigantRepresented_thenTrue() {
+    void givenConsentedRepresentedFlagOnRespondent_whenIsLitigantRepresented_thenTrue() {
         Map<String, Object> caseData = new HashMap<>();
         caseData.put(APPLICANT_REPRESENTED, "No");
         caseData.put(CONSENTED_RESPONDENT_REPRESENTED, "Yes");
@@ -685,7 +685,7 @@ public class CaseDataServiceTest extends BaseServiceTest {
 
         boolean result = caseDataService.isLitigantRepresented(finremCaseDetails, false);
 
-        assertThat(result, is(true));
+        assertThat(result).isTrue();
     }
 
     private static RespondToOrderData getRespondToOrderData(String s) {
